--- a/css/mycss.css
+++ b/css/mycss.css
@@ -1,7 +1,13 @@
+@import url(https://fonts.googleapis.com/css?family=Bangers);
+
 body{
     padding: 0;
     margin: 0;
     overflow: hidden;
+}
+
+#background{
+    z-index: -1;
 }
 
 .centrar{
@@ -9,4 +15,18 @@ body{
     top: 50%; 
     left: 50%;
     transform: translate(-50%, -50%);
+}
+
+footer{
+    font-family: 'Bangers';
+    font-size: 30px;
+    color: white;
+    width: 50%;
+    position: fixed;
+    top: 65%; 
+    left: 25%;
+}
+
+a{
+    color:yellow;
 }
